@@ -1,4 +1,6 @@
 Changes with Apache 2.0.25-dev
+  *) Enable ssl client authentication at SSL_accept time
+     [Madhusudan Mathihalli <madhusudan_mathihalli@hp.com>]
 
   *) Fix a segfault in mod_include when the original request has no
      associated filename (e.g., we're filtering the error document for
